# sSocks

./: CMakeLists.txt  CMakePresets.json  README.md  client.cpp  common.cpp  common.h  server.cpp  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
src/: client.cpp  common.cpp  common.h  server.cpp
